# NatureUserInterfaceStudio

./: .gitignore  CMakeLists.txt  LICENSE  log4cplus.properties
NatureUserInterfaceApp/: CMakeLists.txt  NatureUserInterfaceDemo.cpp  NuiMainController.cpp  NuiMainController.h
NatureUserInterfaceApp/GUI/: NuiCvVis.cpp  NuiCvVis.h  NuiGuiController.cpp  NuiGuiController.h  NuiGuiHWMappable.h  NuiGuiHWTextureMappable.h  NuiGuiOpenCLUtilities.cpp  NuiGuiOpenCLUtilities.h  NuiPangoCloud.h  NuiPangoCloudShader.cpp  NuiPangoCloudShader.h  NuiPangoMeshShader.cpp  NuiPangoMeshShader.h  NuiPangoPolygonMeshShader.cpp  NuiPangoPolygonMeshShader.h  NuiPangoRayIntervalSplattingShader.cpp  NuiPangoRayIntervalSplattingShader.h  NuiPangoTexturedCloudShader.cpp  NuiPangoTexturedCloudShader.h  NuiPangoTexturedMeshShader.cpp  NuiPangoTexturedMeshShader.h  NuiPangoVis.cpp  NuiPangoVis.h
src/DeviceManager/: CMakeLists.txt  NuiDevicePerfCount.h  NuiRGBDDeviceBufferImpl.h  NuiRGBDDeviceCircleBuffer.h  NuiRGBDDeviceController.cpp  NuiRGBDDeviceController.h  NuiRGBDDeviceManagerImpl.h
src/DeviceManager/FileLoader/: NuiFrameLoadManager.cpp  NuiFrameLoadManager.h  NuiFrameLoader.cpp  NuiFrameLoader.h
src/DeviceManager/KinectV1/: NuiKinectV1FaceTracker.cpp  NuiKinectV1FaceTracker.h  NuiKinectV1FusionGrabber.cpp  NuiKinectV1FusionGrabber.h  NuiKinectV1Grabber.cpp  NuiKinectV1Grabber.h  NuiKinectV1Manager.cpp  NuiKinectV1Manager.h
src/DeviceManager/KinectV2/: NuiKinectFusionGrabber.cpp  NuiKinectFusionGrabber.h  NuiKinectV2FusionGrabber.cpp  NuiKinectV2FusionGrabber.h  NuiKinectV2Grabber.cpp  NuiKinectV2Grabber.h  NuiKinectV2Manager.cpp  NuiKinectV2Manager.h
src/Foundation/: CMakeLists.txt  NuiBitArray.h  NuiCholesky.h  NuiDebugMacro.cpp  NuiDebugMacro.h  NuiEventProfiler.cpp  NuiEventProfiler.h  NuiFileIOUtilities.cpp  NuiFileIOUtilities.h  NuiLogger.cpp  NuiLogger.h  NuiMatrixUtilities.cpp  NuiMatrixUtilities.h  NuiProfiler.cpp  NuiProfiler.h  NuiProfilingScope.cpp  NuiProfilingScope.h  NuiThreadManager.h  NuiThreadObject.cpp  NuiThreadObject.h  NuiTimeLog.cpp  NuiTimeLog.h  NuiTimeStamp.h  SgVec2T.h  SgVec3T.h  SgVec4T.h
src/Frame/: CMakeLists.txt  NuiCompositeFrame.cpp  NuiCompositeFrame.h  NuiCompoundImageFrame.cpp  NuiCompoundImageFrame.h  NuiCompressedDepthFrame.cpp  NuiCompressedDepthFrame.h  NuiDepthFrame.cpp  NuiDepthFrame.h  NuiExtendedDepthFrame.cpp  NuiExtendedDepthFrame.h  NuiFaceTrackingFrame.cpp  NuiFaceTrackingFrame.h  NuiFacialModelFrame.cpp  NuiFacialModelFrame.h  NuiFrameSaveManager.cpp  NuiFrameSaveManager.h  NuiFrameUtilities.cpp  NuiFrameUtilities.h  NuiFusionImageFrame.cpp  NuiFusionImageFrame.h  NuiGestureFrame.cpp  NuiGestureFrame.h  NuiGrabberFrame.h  NuiImageFrame.h  NuiKinectV1FaceTrackingFrame.h  NuiPointCloudFrame.cpp  NuiPointCloudFrame.h  NuiSkeletonFrame.cpp  NuiSkeletonFrame.h  NuiVisualFrame.cpp  NuiVisualFrame.h  NuiVisualFrameSaveManager.cpp  NuiVisualFrameSaveManager.h
src/Frame/Buffer/: NuiDataPtrCache.h  NuiDataPtrCircleBuffer.h  NuiDataSharedPtrCache.h  NuiDataSharedPtrCircleBuffer.h  NuiFrameBuffer.cpp  NuiFrameBuffer.h  NuiFrameCache.cpp  NuiFrameCache.h  NuiFrameCacheImpl.h  NuiFrameCircleBuffer.h  NuiVisualFrameCircleBuffer.h
src/MayaBridge/: CMakeLists.txt  NuiMayaProfiler.cpp  NuiMayaProfiler.h  api_macros.h  pluginMain.cpp
src/MayaBridge/DeviceGrabber/: NuiMayaCacheTimer.cpp  NuiMayaCacheTimer.h  NuiMayaDeviceGrabber.cpp  NuiMayaDeviceGrabber.h  NuiMayaPreviewerRenderOverride.cpp  NuiMayaPreviewerRenderOverride.h  NuiPreviewerRenderOverride.cpp  NuiPreviewerRenderOverride.h  moc_NuiMayaCacheTimer.cpp
src/MayaBridge/HardwareMapping/: XgmHWMappable.h  XgmOpenGLThreadProvider.cpp  XgmOpenGLThreadProvider.h  XgmSculptUtil.cpp  XgmSculptUtil.h
src/MayaBridge/HardwareUtilities/: NuiMayaHWMappable.h  NuiMayaOpenCLUtilities.cpp  NuiMayaOpenCLUtilities.h  NuiMayaOpenGLThreadProvider.cpp  NuiMayaOpenGLThreadProvider.h
src/MayaBridge/PointCloudProcess/: NuiMayaMeshData.cpp  NuiMayaMeshData.h  NuiMayaMeshGenerator.cpp  NuiMayaMeshGenerator.h
src/OpenCLUtilities/: CMakeLists.txt  NuiGPUMemManager.cpp  NuiGPUMemManager.h  NuiMappable.h  NuiOfflineRenderFactory.cpp  NuiOfflineRenderFactory.h  NuiOpenCLBufferFactory.cpp  NuiOpenCLBufferFactory.h  NuiOpenCLFoundationUtils.cpp  NuiOpenCLFoundationUtils.h  NuiOpenCLGlobal.cpp  NuiOpenCLGlobal.h  NuiOpenCLKernelManager.cpp  NuiOpenCLKernelManager.h  NuiOpenCLUtil.cpp  NuiOpenCLUtil.h  NuiOpenGLThread.cpp  NuiOpenGLThread.h  NuiTextureMappable.h
src/SLAM/: CMakeLists.txt  NuiExperimentCPU.cpp  NuiExperimentCPU.h  NuiHashingChunkGrid.cpp  NuiHashingChunkGrid.h  NuiHashingChunkGridConfig.cpp  NuiHashingChunkGridConfig.h  NuiHashingRaycastConfig.cpp  NuiHashingRaycastConfig.h  NuiHashingSDF.cpp  NuiHashingSDF.h  NuiHashingSDFConfig.cpp  NuiHashingSDFConfig.h  NuiHashingVolume.cpp  NuiHashingVolume.h  NuiICPConfig.cpp  NuiICPConfig.h  NuiKinfuCameraState.h  NuiKinfuColorVolume.cpp  NuiKinfuColorVolume.h  NuiKinfuMainEngine.cpp  NuiKinfuMainEngine.h  NuiKinfuManager.cpp  NuiKinfuManager.h  NuiKinfuPointCloud.h  NuiKinfuTSDFVolume.cpp  NuiKinfuTSDFVolume.h  NuiKinfuTracker.cpp  NuiKinfuTracker.h  NuiKinfuTrackingEngine.cpp  NuiKinfuTrackingEngine.h  NuiKinfuTransform.cpp  NuiKinfuTransform.h  NuiKinfuVolume.cpp  NuiKinfuVolume.h  NuiKinfuVolumeConfig.cpp  NuiKinfuVolumeConfig.h  NuiMarchingCubeTable.h  NuiMeshingUtil.cpp  NuiMeshingUtil.h  (+6 more)
src/SLAM/Backend/: CMakeLists.txt  (+6 more)
src/Shape/: CMakeLists.txt  NuiCLMappableData.cpp  NuiCLMappableData.h  NuiCameraIntrinsics.h  NuiCameraParams.h  NuiCameraPos.h  NuiCompoundImage.cpp  NuiCompoundImage.h  NuiDensePose.h  NuiDevicePointCloud.cpp  NuiDevicePointCloud.h  NuiFacialModel.cpp  NuiFacialModel.h  NuiFusionMesh.h  NuiGestureResponse.cpp  NuiGestureResponse.h  NuiGestureResult.cpp  NuiGestureResult.h  NuiImageBuffer.cpp  NuiImageBuffer.h  NuiMemoryBlock.h  NuiMeshShape.h  NuiPointCloudImpl.h  NuiPointCloudShape.cpp  NuiPointCloudShape.h  NuiPolygonMesh.cpp  NuiPolygonMesh.h  NuiSkeletonJoints.cpp  NuiSkeletonJoints.h  NuiTrackedFace.cpp  NuiTrackedFace.h
(+192 files in other folders)
